[gd_scene load_steps=5 format=3 uid="uid://bs1brnamwrxm5"]

[ext_resource type="Script" uid="uid://b03j42vjllam5" path="res://scripts/PauseMenu.gd" id="1_m1gaa"]
[ext_resource type="AudioStream" uid="uid://c3jdgshqk10dk" path="res://audios/whamp.ogg" id="2_46crp"]
[ext_resource type="Script" uid="uid://hcfpubg7d76x" path="res://scripts/ButtonSFX.gd" id="3_kilm7"]
[ext_resource type="AudioStream" uid="uid://cvv4xl7wqlhul" path="res://audios/womp.ogg" id="4_d6gah"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1gaa")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PausePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMargin" type="MarginContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PauseContainer" type="VBoxContainer" parent="PausePanel/PauseMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PauseTitle" type="Label" parent="PausePanel/PauseMargin/PauseContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "‚è∏Ô∏è JUEGO PAUSADO"

[node name="HSeparator" type="HSeparator" parent="PausePanel/PauseMargin/PauseContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="PausePanel/PauseMargin/PauseContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚ñ∂Ô∏è Continuar"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer/ResumeButton"]
stream = ExtResource("2_46crp")
script = ExtResource("3_kilm7")

[node name="SaveButton" type="Button" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üíæ Guardar Partida"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer/SaveButton"]
stream = ExtResource("2_46crp")
script = ExtResource("3_kilm7")

[node name="LoadButton" type="Button" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üìÇ Cargar Partida"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer/LoadButton"]
stream = ExtResource("2_46crp")
script = ExtResource("3_kilm7")

[node name="OptionsButton" type="Button" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚öôÔ∏è Opciones"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer/OptionsButton"]
stream = ExtResource("2_46crp")
script = ExtResource("3_kilm7")

[node name="HSeparator" type="HSeparator" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
layout_mode = 2

[node name="ReturnMenuButton" type="Button" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üè† Volver al Men√∫ Principal"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer/ReturnMenuButton"]
stream = ExtResource("4_d6gah")
script = ExtResource("3_kilm7")

[node name="QuitButton" type="Button" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üö™ Salir del Juego"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PausePanel/PauseMargin/PauseContainer/ButtonsContainer/QuitButton"]
stream = ExtResource("4_d6gah")
script = ExtResource("3_kilm7")

[node name="InfoLabel" type="Label" parent="PausePanel/PauseMargin/PauseContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.683078, 0.683077, 0.683077, 1)
theme_override_font_sizes/font_size = 16
text = "Presiona ESC para pausar/continuar"
